gccida/g2/gen_split_1231
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1231/src/insn-emit.c:17234:17: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v8 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v7, v6); 
                ^~~~~~~~
                rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1231/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1231/src/insn-emit.c:17234:26: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v8 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v7, v6); 
              ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1231/src/insn-emit.c:17234:49: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v7, v6); 
                                                ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1231/src/obj/insn-emit.o] Error 1
